Closed Bug 1269422 Opened 9 years ago Closed 9 years ago

Various new build failures

Categories

(Firefox OS Graveyard :: General, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox49 fixed)

RESOLVED FIXED
Tracking Status
firefox49 --- fixed

People

(Reporter: fabrice, Assigned: tzimmermann)

References

Details

Attachments

(4 files, 2 obsolete files)

On current m-c: libvideo_coding_utility.a.desc libvideo_processing.a.desc In file included from ../../ipc/ipdl/_ipdlheaders/mozilla/layers/PCompositorBridgeParent.h:14:0, from ../../dist/include/mozilla/layers/CompositorBridgeParent.h:34, from ../../../../pine/widget/gonk/nsAppShell.cpp:75: ../../dist/include/mozilla/ipc/MessageChannel.h:117:32: error: 'mozilla::moz_function' has not been declared void PeekMessages(mozilla::function<bool(const Message& aMsg)> aInvoke); ^ ../../dist/include/mozilla/ipc/MessageChannel.h:117:44: error: expected ',' or '...' before '<' token void PeekMessages(mozilla::function<bool(const Message& aMsg)> aInvoke); ^ In the directory /home/fabrice/dev/B2G/objdir-gecko-pine/widget/gonk The following command failed to execute properly: /usr/bin/ccache /home/fabrice/dev/B2G/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/bin/arm-linux-androideabi-g++ -std=gnu++11 -o nsAppShell.o -c -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/system_wrappers -include /home/fabrice/dev/pine/config/gcc_hidden.h -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DHAVE_OFF64_T -DSK_BUILD_FOR_ANDROID_NDK -DHAVE_POSIX_CLOCKS -DMOZ_OMX_DECODER -DSTATIC_EXPORTABLE_JS_API -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/home/fabrice/dev/pine/widget/gonk -I/home/fabrice/dev/B2G/objdir-gecko-pine/widget/gonk -I/home/fabrice/dev/B2G/objdir-gecko-pine/ipc/ipdl/_ipdlheaders -I/home/fabrice/dev/pine/ipc/chromium/src -I/home/fabrice/dev/pine/ipc/glue -I/home/fabrice/dev/pine/dom/system/android -I/home/fabrice/dev/pine/gfx/skia/skia/include/config -I/home/fabrice/dev/pine/gfx/skia/skia/include/core -I/home/fabrice/dev/pine/image -I/home/fabrice/dev/pine/widget -I/home/fabrice/dev/B2G/frameworks/native/opengl/include -I/home/fabrice/dev/B2G/hardware/libhardware/include -I/home/fabrice/dev/B2G/hardware/libhardware_legacy/include -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/include -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/include/nspr -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /home/fabrice/dev/B2G/objdir-gecko-pine/mozilla-config.h -MD -MP -MF .deps/nsAppShell.o.pp -DANDROID -isystem /home/fabrice/dev/B2G/bionic/libc/arch-arm/include -isystem /home/fabrice/dev/B2G/bionic/libc/include -isystem /home/fabrice/dev/B2G/bionic/libstdc++/include -isystem /home/fabrice/dev/B2G/bionic/libc/kernel/common -isystem /home/fabrice/dev/B2G/bionic/libc/kernel/arch-arm -isystem /home/fabrice/dev/B2G/bionic/libm/include -isystem /home/fabrice/dev/B2G/bionic/libm/include/arm -isystem /home/fabrice/dev/B2G/bionic/libthread_db/include -I/home/fabrice/dev/B2G/system -I/home/fabrice/dev/B2G/system/core/include -isystem /home/fabrice/dev/B2G/bionic -I/home/fabrice/dev/B2G/hardware/libhardware/include -I/home/fabrice/dev/B2G/external/valgrind/fxos-include -I/home/fabrice/dev/B2G/frameworks/native/include -I/home/fabrice/dev/B2G/frameworks/av/include -I/home/fabrice/dev/B2G/frameworks/av/include/media -I/home/fabrice/dev/B2G/frameworks/av/include/camera -I/home/fabrice/dev/B2G/frameworks/native/include/media/openmax -I/home/fabrice/dev/B2G/frameworks/av/media/libstagefright/include -I/home/fabrice/dev/B2G/external/mdnsresponder/mDNSShared -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wthread-safety -Wno-invalid-offsetof -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -mandroid -fno-short-enums -fno-exceptions -DMOZ_ENABLE_JS_DUMP -include /home/fabrice/dev/B2G/gonk-misc/Unicode.h -I/home/fabrice/dev/pine/build/stlport/stlport -I/home/fabrice/dev/B2G/ndk/sources/cxx-stl/system/include -march=armv7-a -mthumb -mfpu=neon -mfloat-abi=softfp -mno-unaligned-access -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -freorder-blocks -fno-reorder-functions -Os -funwind-tables -Werror /home/fabrice/dev/pine/widget/gonk/nsAppShell.cpp make[6]: *** [nsAppShell.o] Error 1 make[5]: *** [widget/gonk/target] Error 2 make[5]: *** Waiting for unfinished jobs.... In file included from Unified_cpp_gfx_layers6.cpp:128:0: /home/fabrice/dev/pine/gfx/layers/opengl/CompositorOGL.cpp: In member function 'already_AddRefed<mozilla::gl::GLContext> mozilla::layers::CompositorOGL::CreateContext()': /home/fabrice/dev/pine/gfx/layers/opengl/CompositorOGL.cpp:148:12: error: 'class mozilla::widget::CompositorWidgetProxy' has no member named 'SetNativeData' mWidget->SetNativeData(NS_NATIVE_OPENGL_CONTEXT, ^ /home/fabrice/dev/pine/gfx/layers/opengl/CompositorOGL.cpp: In member function 'void mozilla::layers::CompositorOGL::CleanupResources()': /home/fabrice/dev/pine/gfx/layers/opengl/CompositorOGL.cpp:176:12: error: 'class mozilla::widget::CompositorWidgetProxy' has no member named 'SetNativeData' mWidget->SetNativeData(NS_NATIVE_OPENGL_CONTEXT, ^ In the directory /home/fabrice/dev/B2G/objdir-gecko-pine/gfx/layers The following command failed to execute properly: /usr/bin/ccache /home/fabrice/dev/B2G/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/bin/arm-linux-androideabi-g++ -std=gnu++11 -o Unified_cpp_gfx_layers6.o -c -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/system_wrappers -include /home/fabrice/dev/pine/config/gcc_hidden.h -DNDEBUG=1 -DTRIMMED=1 -DGOOGLE_PROTOBUF_NO_RTTI -DOS_POSIX=1 -DOS_LINUX=1 -DSTATIC_EXPORTABLE_JS_API -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/home/fabrice/dev/pine/gfx/layers -I/home/fabrice/dev/B2G/objdir-gecko-pine/gfx/layers -I/home/fabrice/dev/pine/widget/gonk -I/home/fabrice/dev/B2G/objdir-gecko-pine/ipc/ipdl/_ipdlheaders -I/home/fabrice/dev/pine/ipc/chromium/src -I/home/fabrice/dev/pine/ipc/glue -I/home/fabrice/dev/pine/docshell/base -I/home/fabrice/dev/pine/layout/base -I/home/fabrice/dev/pine/layout/generic -I/home/fabrice/dev/B2G/frameworks/av/include/media/stagefright -I/home/fabrice/dev/B2G/frameworks/native/include/media/openmax -I/home/fabrice/dev/pine/gfx/skia -I/home/fabrice/dev/pine/gfx/skia/skia/include/config -I/home/fabrice/dev/pine/gfx/skia/skia/include/core -I/home/fabrice/dev/pine/gfx/skia/skia/include/gpu -I/home/fabrice/dev/pine/gfx/skia/skia/include/utils -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/include -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/include/nspr -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /home/fabrice/dev/B2G/objdir-gecko-pine/mozilla-config.h -MD -MP -MF .deps/Unified_cpp_gfx_layers6.o.pp -DANDROID -isystem /home/fabrice/dev/B2G/bionic/libc/arch-arm/include -isystem /home/fabrice/dev/B2G/bionic/libc/include -isystem /home/fabrice/dev/B2G/bionic/libstdc++/include -isystem /home/fabrice/dev/B2G/bionic/libc/kernel/common -isystem /home/fabrice/dev/B2G/bionic/libc/kernel/arch-arm -isystem /home/fabrice/dev/B2G/bionic/libm/include -isystem /home/fabrice/dev/B2G/bionic/libm/include/arm -isystem /home/fabrice/dev/B2G/bionic/libthread_db/include -I/home/fabrice/dev/B2G/system -I/home/fabrice/dev/B2G/system/core/include -isystem /home/fabrice/dev/B2G/bionic -I/home/fabrice/dev/B2G/hardware/libhardware/include -I/home/fabrice/dev/B2G/external/valgrind/fxos-include -I/home/fabrice/dev/B2G/frameworks/native/include -I/home/fabrice/dev/B2G/frameworks/av/include -I/home/fabrice/dev/B2G/frameworks/av/include/media -I/home/fabrice/dev/B2G/frameworks/av/include/camera -I/home/fabrice/dev/B2G/frameworks/native/include/media/openmax -I/home/fabrice/dev/B2G/frameworks/av/media/libstagefright/include -I/home/fabrice/dev/B2G/external/mdnsresponder/mDNSShared -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wthread-safety -Wno-invalid-offsetof -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -mandroid -fno-short-enums -fno-exceptions -DMOZ_ENABLE_JS_DUMP -include /home/fabrice/dev/B2G/gonk-misc/Unicode.h -I/home/fabrice/dev/pine/build/stlport/stlport -I/home/fabrice/dev/B2G/ndk/sources/cxx-stl/system/include -march=armv7-a -mthumb -mfpu=neon -mfloat-abi=softfp -mno-unaligned-access -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -freorder-blocks -fno-reorder-functions -Os -funwind-tables -Werror -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/include/cairo -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/include/cairo /home/fabrice/dev/B2G/objdir-gecko-pine/gfx/layers/Unified_cpp_gfx_layers6.cpp make[6]: *** [Unified_cpp_gfx_layers6.o] Error 1 make[6]: *** Waiting for unfinished jobs.... In file included from Unified_cpp_gfx_layers5.cpp:11:0: /home/fabrice/dev/pine/gfx/layers/composite/LayerManagerComposite.cpp: In member function 'void mozilla::layers::LayerManagerComposite::RenderToPresentationSurface()': /home/fabrice/dev/pine/gfx/layers/composite/LayerManagerComposite.cpp:1068:73: error: invalid static_cast from type 'mozilla::widget::CompositorWidgetProxy*' to type 'nsWindow*' nsScreenGonk* screen = static_cast<nsWindow*>(mCompositor->GetWidget())->GetScreen(); ^ In the directory /home/fabrice/dev/B2G/objdir-gecko-pine/gfx/layers The following command failed to execute properly: /usr/bin/ccache /home/fabrice/dev/B2G/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/bin/arm-linux-androideabi-g++ -std=gnu++11 -o Unified_cpp_gfx_layers5.o -c -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/system_wrappers -include /home/fabrice/dev/pine/config/gcc_hidden.h -DNDEBUG=1 -DTRIMMED=1 -DGOOGLE_PROTOBUF_NO_RTTI -DOS_POSIX=1 -DOS_LINUX=1 -DSTATIC_EXPORTABLE_JS_API -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/home/fabrice/dev/pine/gfx/layers -I/home/fabrice/dev/B2G/objdir-gecko-pine/gfx/layers -I/home/fabrice/dev/pine/widget/gonk -I/home/fabrice/dev/B2G/objdir-gecko-pine/ipc/ipdl/_ipdlheaders -I/home/fabrice/dev/pine/ipc/chromium/src -I/home/fabrice/dev/pine/ipc/glue -I/home/fabrice/dev/pine/docshell/base -I/home/fabrice/dev/pine/layout/base -I/home/fabrice/dev/pine/layout/generic -I/home/fabrice/dev/B2G/frameworks/av/include/media/stagefright -I/home/fabrice/dev/B2G/frameworks/native/include/media/openmax -I/home/fabrice/dev/pine/gfx/skia -I/home/fabrice/dev/pine/gfx/skia/skia/include/config -I/home/fabrice/dev/pine/gfx/skia/skia/include/core -I/home/fabrice/dev/pine/gfx/skia/skia/include/gpu -I/home/fabrice/dev/pine/gfx/skia/skia/include/utils -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/include -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/include/nspr -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /home/fabrice/dev/B2G/objdir-gecko-pine/mozilla-config.h -MD -MP -MF .deps/Unified_cpp_gfx_layers5.o.pp -DANDROID -isystem /home/fabrice/dev/B2G/bionic/libc/arch-arm/include -isystem /home/fabrice/dev/B2G/bionic/libc/include -isystem /home/fabrice/dev/B2G/bionic/libstdc++/include -isystem /home/fabrice/dev/B2G/bionic/libc/kernel/common -isystem /home/fabrice/dev/B2G/bionic/libc/kernel/arch-arm -isystem /home/fabrice/dev/B2G/bionic/libm/include -isystem /home/fabrice/dev/B2G/bionic/libm/include/arm -isystem /home/fabrice/dev/B2G/bionic/libthread_db/include -I/home/fabrice/dev/B2G/system -I/home/fabrice/dev/B2G/system/core/include -isystem /home/fabrice/dev/B2G/bionic -I/home/fabrice/dev/B2G/hardware/libhardware/include -I/home/fabrice/dev/B2G/external/valgrind/fxos-include -I/home/fabrice/dev/B2G/frameworks/native/include -I/home/fabrice/dev/B2G/frameworks/av/include -I/home/fabrice/dev/B2G/frameworks/av/include/media -I/home/fabrice/dev/B2G/frameworks/av/include/camera -I/home/fabrice/dev/B2G/frameworks/native/include/media/openmax -I/home/fabrice/dev/B2G/frameworks/av/media/libstagefright/include -I/home/fabrice/dev/B2G/external/mdnsresponder/mDNSShared -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wthread-safety -Wno-invalid-offsetof -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -mandroid -fno-short-enums -fno-exceptions -DMOZ_ENABLE_JS_DUMP -include /home/fabrice/dev/B2G/gonk-misc/Unicode.h -I/home/fabrice/dev/pine/build/stlport/stlport -I/home/fabrice/dev/B2G/ndk/sources/cxx-stl/system/include -march=armv7-a -mthumb -mfpu=neon -mfloat-abi=softfp -mno-unaligned-access -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -freorder-blocks -fno-reorder-functions -Os -funwind-tables -Werror -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/include/cairo -I/home/fabrice/dev/B2G/objdir-gecko-pine/dist/include/cairo /home/fabrice/dev/B2G/objdir-gecko-pine/gfx/layers/Unified_cpp_gfx_layers5.cpp make[6]: *** [Unified_cpp_gfx_layers5.o] Error 1 libneteq.a.desc libxpcom_build.a.desc make[5]: *** [gfx/layers/target] Error 2
This is fallout from bug 1265131, where Skia defines 'function' at [1]. This patch works, but it seems like it's not the right fix. [1] https://dxr.mozilla.org/mozilla-central/source/gfx/skia/skia/include/private/SkTLogic.h#41
Assignee: nobody → tzimmermann
Status: NEW → ASSIGNED
Attachment #8748156 - Flags: review?(lsalzman)
Changes since v1: - fixed another problem with 'move'
Attachment #8748156 - Attachment is obsolete: true
Attachment #8748156 - Flags: review?(lsalzman)
Attachment #8748183 - Flags: review?(lsalzman)
Attachment #8748158 - Flags: review?(dvander) → review+
Comment on attachment 8748159 [details] [diff] [review] [03] Bug 1269422: Wrap Gonk widget in |CompositorWidgetProxyWrapper| Review of attachment 8748159 [details] [diff] [review]: ----------------------------------------------------------------- This will leak CompositorWidgetProxyWrapper, since CompositorBridgeParent doesn't own a reference to it (nsBaseWidget is supposed to). I would just do this: https://dxr.mozilla.org/mozilla-central/source/widget/android/nsWindow.cpp#3553
Attachment #8748159 - Flags: review?(dvander) → review-
Changes since v1: - fixed memory leak
Attachment #8748158 - Attachment is obsolete: true
Attachment #8748551 - Flags: review?(dvander)
Attachment #8748158 - Attachment is obsolete: false
Attachment #8748159 - Attachment is obsolete: true
Comment on attachment 8748183 [details] [diff] [review] [01] Bug 1269422: Remove namespace polution from Skia (v2) Review of attachment 8748183 [details] [diff] [review]: ----------------------------------------------------------------- I am going to handle this inside Skia in a different way that will avoid this particular #define leakage you are experiencing. I think this will be better than letting the abstraction leak out into other places in the tree. I'll get to this today and will file it as a blocker on this bug.
Attachment #8748183 - Flags: review?(lsalzman) → review-
Attachment #8748551 - Flags: review?(dvander) → review+
Depends on: 1270231
Attached file tail_of_build_log.txt
Build still fails, looks like something within the crash reporter?
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: