Bug 1269422: Get Gonk widget with |CompositorWidgetProxy::RealWidget|. r=dvander